--- a/services/css/style.css
+++ b/services/css/style.css
@@ -4,8 +4,8 @@ body, html {
     margin: 0 auto;
     min-height: 100vh;
     min-width: 320px;
-    width: 100%;
-    height: 100%;
+    /*width: 100vh;*/
+    /*height: 100%;*/
     font-family: "TT Lakes", Fallback, sans-serif;
 }
 
@@ -16,31 +16,19 @@ header {
     /*background-color: pink;*/
 }
 
-.container {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 0 16px;
+.header-items__item-call,
+.header-items__item-chat,
+.header-items__item-profile,
+#divider1,
+#item-call,
+#item-chat,
+#item-profile {
+    display: none;
 }
-
-@media (min-width: 767px) {
-    .container {
-        max-width: 100%;
-        margin: 0 auto;
-        padding: 0 24px;
-    }
-}
-
-@media (min-width: 1120px) {
-    .container {
-        max-width: 100%;
-        margin: 0 auto;
-        padding: 0 32px;
-    }
-}
-
 
 .header-items__item-container {
     display: flex;
+    justify-content: space-between;
     min-width: 40px;
     height: 40px;
     background: #FF3E79;
@@ -50,24 +38,39 @@ header {
 .header-items__container {
     display: flex;
     max-width: 100%;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
     align-items: center;
     margin-left: auto;
     margin-right: auto;
     padding: 10px 0;
 }
 
-/*.header-items__container > * {*/
-/*    margin-right: 15px;*/
-/*}*/
+.first-block,
+.second-block {
+    display: flex;
+    align-items: center;
+}
 
-/*.header-items__container > div:last-child {*/
-/*    margin-right: 0;*/
-/*}*/
+.second-block {
+    margin-left: auto;
+}
+
+.first-block > div,
+.second-block > div {
+    margin-right: 16px;
+}
+
+.first-block > div:last-child,
+.second-block > div:last-child {
+    margin-right: 0;
+}
 
 .header-items__item-status,
 .header-items__item-repair,
-.header-items__item-burger {
+.header-items__item-burger,
+.header-items__item-chat,
+.header-items__item-call,
+.header-items__item-profile{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -91,7 +94,7 @@ header {
 
 main {
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     padding-top: 24px;
     background: #F8F8F8;
 }
@@ -153,6 +156,11 @@ main {
     padding: 8px;
 }
 
+button {
+    background: 0;
+    border: 0;
+}
+
 .active {
     background: white;
     border: 2px solid #B8FFEC;
@@ -160,26 +168,33 @@ main {
 }
 
 .main-content {
+    display: flex;
+    flex-wrap: wrap;
     width: 100%;
 }
 
 .main-content__text {
+    order: 1;
     width: 100%;
     font-size: 14px;
     line-height: 18px;
     letter-spacing: 0.2px;
     color: #1B1C21;
+    align-self: flex-start;
+    max-height: 90px;
+    overflow: hidden;
 }
 
 .read-more {
+    order: 2;
     display: flex;
-    align-items: flex-start;
     line-height: 24px;
     margin-top: 16px;
     /*margin-bottom: 16px;*/
 }
 
-.read-more__text {
+.read-more__button {
+    order: 2;
     font-size: 16px;
     font-weight: 500;
     letter-spacing: -0.2px;
@@ -188,16 +203,155 @@ main {
 }
 
 .image-company {
+    order: 3;
     width: 100%;
-    margin-right: auto;
-    margin-left: auto;
+    margin-top: 16px;
 }
 
 .image-company__image {
+    position: absolute;
     width: 100%;
-    /*mask-image: revert;*/
+    min-width: 320px;
+    height: auto;
+    left: 0%;
 }
 
 .swiper-slide-active {
     width: 100%;
+}
+
+.container {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 16px;
+}
+
+.status-text,
+.repair-text {
+    display: none;
+}
+
+/*.text-block {*/
+/*    max-height: 90px;*/
+/*}*/
+
+@media (min-width: 767px) {
+    .container {
+        max-width: 100%;
+        margin: 0 auto;
+        padding: 0 24px;
+    }
+
+    .header-items__item-call,
+    .header-items__item-chat,
+    .header-items__item-profile,
+    #divider1,
+    #item-call,
+    #item-chat,
+    #item-profile {
+        display: flex;
+    }
+
+    .header-items__item-logo,
+    .header-items__item-container {
+        margin-right: auto;
+    }
+
+    .main-content {
+        /*justify-content: center;*/
+        flex-wrap: nowrap;
+        margin-top: 40px;
+    }
+
+    .main-content__text {
+        max-height: 53%;
+        overflow: hidden;
+    }
+
+    .text-block {
+        display: flex;
+        flex-direction: column;
+        max-width: 45%;
+        line-height: 20px;
+    }
+
+    .image-block {
+        display: flex;
+        justify-content: flex-end;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .image-company {
+        display: flex;
+        position: static;
+        margin-top: 0;
+        justify-content: center;
+        margin-left: 10px;
+        /*margin-right: auto;*/
+    }
+    .image-company__image {
+        position: static;
+        width: 360px;
+        height: auto;
+        border-radius: 6px;
+        left: auto;
+    }
+}
+
+@media (min-width: 1120px) {
+    .container {
+        max-width: 100%;
+        margin: 0 auto;
+        padding: 0 32px;
+    }
+
+    .main {
+        padding-top: 30px;
+        position: absolute;
+        top: 0;
+    }
+
+    .shadow-line,
+    #item-burger,
+    #item-logo,
+    #divider1,
+    #divider2,
+    #item-profile,
+    #item-chat,
+    #item-call {
+        display: none;
+    }
+
+    .second-block > .status-text,
+    .second-block > .repair-text {
+        display: block;
+        align-self: center;
+        margin-right: 5px;
+    }
+
+    .second-block {
+        margin-top: 20px;
+    }
+
+    #item-repair {
+        margin-right: 32px;
+    }
+
+    .image-company {
+        display: flex;
+        position: static;
+        margin-top: 0;
+        justify-content: center;
+        margin-left: 10px;
+        /*margin-right: auto;*/
+    }
+
+    .image-company__image {
+        position: static;
+        width: 530px;
+        height: auto;
+        border-radius: 6px;
+        left: auto;
+    }
 }
