--- a/services/css/style.css
+++ b/services/css/style.css
@@ -1,19 +1,14 @@
 body, html {
     -webkit-overflow-scrolling: touch;
-    /*background-color: #f0f0f0;*/
     margin: 0 auto;
     min-height: 100vh;
     min-width: 320px;
-    /*width: 100vh;*/
-    /*height: 100%;*/
     font-family: "TT Lakes", Fallback, sans-serif;
 }
 
 header {
-    /*padding-top: 16px;*/
     position: relative;
     z-index: 70;
-    /*background-color: pink;*/
 }
 
 .header-items__item-call,
@@ -38,7 +33,6 @@ header {
 .items-container {
     display: flex;
     max-width: 100%;
-    /*justify-content: space-between;*/
     align-items: center;
     margin-left: auto;
     margin-right: auto;
@@ -78,7 +72,7 @@ header {
     margin-right: auto;
 }
 
-.header-items__item-divider {
+.items-container__item-divider {
     min-width: 2px;
     height: 32px;
     border-radius: 1px;
@@ -110,12 +104,10 @@ main {
 
 .title-text h1 {
     margin: 0;
-    /*margin-left: 16px;*/
     font-size: 28px;
 }
 
 .swiper-container {
-    /*max-width: max-content;*/
     min-width: 0;
     margin: 15px auto;
     position: relative;
@@ -185,7 +177,7 @@ button {
     display: flex;
     line-height: 24px;
     margin-top: 16px;
-    /*margin-bottom: 16px;*/
+    margin-left: 10px;
 }
 
 .read-more__button {
@@ -197,13 +189,13 @@ button {
     margin-left: 16px;
 }
 
-.image-container {
+.image-block {
     order: 3;
     width: 100%;
     margin-top: 16px;
 }
 
-.image-container__image {
+.image-block__image {
     position: absolute;
     width: 100%;
     min-width: 320px;
@@ -225,10 +217,6 @@ button {
 .items-container__repair-text {
     display: none;
 }
-
-/*.text-block {*/
-/*    max-height: 90px;*/
-/*}*/
 
 @media (min-width: 767px) {
     .container {
@@ -253,7 +241,6 @@ button {
     }
 
     .main-content {
-        /*justify-content: center;*/
         flex-wrap: nowrap;
         margin-top: 40px;
     }
@@ -277,15 +264,14 @@ button {
         margin-left: auto;
     }
 
-    .image-container {
+    .image-block__container {
         display: flex;
         position: static;
         margin-top: 0;
         justify-content: center;
         margin-left: 10px;
-        /*margin-right: auto;*/
     }
-    .image-container__image {
+    .image-block__image {
         position: static;
         width: 360px;
         height: auto;
@@ -333,16 +319,15 @@ button {
         margin-right: 32px;
     }
 
-    .image-container {
+    .image-block__container {
         display: flex;
         position: static;
         margin-top: 0;
         justify-content: center;
         margin-left: 10px;
-        /*margin-right: auto;*/
     }
 
-    .image-container__image {
+    .image-block__image {
         position: static;
         width: 100%;
         max-width: 100vh;
