--- a/services-burger/css/style.css
+++ b/services-burger/css/style.css
@@ -28,10 +28,7 @@ button {
     margin-left: auto;
     margin-right: auto;
     width: 272px;
-    min-height: 972px;
-    max-height: 100%;
-    padding-top: 20px;
-    padding-bottom: 32px;
+    min-height: 100vh;
 }
 
 .burger {
@@ -39,8 +36,7 @@ button {
     float: left;
     min-width: 320px;
     max-width: 320px;
-    min-height: 1024px;
-    height: 100vh;
+    height: max-content;
     background-color: white;
     box-shadow: 0 -10px 40px 1px rgba(0, 0, 0, 0.3);
 }
@@ -48,14 +44,15 @@ button {
 .burger__header {
     display: flex;
     align-items: center;
+    margin-top: 24px;
 }
 
 .burger__navigation-list {
     display: flex;
     flex-direction: column;
     list-style: none;
-    margin: 0;
     padding: 0;
+    margin: 0 0 32px;
 }
 
 .burger__navigation-list li:first-child {
@@ -66,6 +63,7 @@ button {
     display: flex;
     flex-direction: column;
     margin-top: auto;
+    margin-bottom: 32px;
 }
 
 .footer-buttons {
