--- a/allInOne/src/built/css/style.css
+++ b/allInOne/src/built/css/style.css
@@ -1,5 +1,3 @@
-
-
 body,
 html {
     -webkit-overflow-scrolling: touch;
@@ -13,6 +11,11 @@ header {
     position: relative;
     z-index: 70;
     background-color: white;
+}
+
+.scroll-fix {
+    position: absolute;
+    width: calc(100vw - 100%);
 }
 
 .header-items__item-call,
@@ -56,7 +59,7 @@ header {
     align-items: center;
     margin-left: auto;
     margin-right: auto;
-    padding: 10px 0;
+    padding: 10px 16px;
 }
 
 .first-block,
@@ -76,6 +79,10 @@ header {
 
 .first-block > div:last-child,
 .second-block > div:last-child {
+    margin-right: 0;
+}
+
+.button-status {
     margin-right: 0;
 }
 
@@ -128,9 +135,11 @@ main {
 .title-text h1 {
     margin: 0;
     font-size: 28px;
+    font-weight: 700;
+    letter-spacing: -0.6px;
 }
 
-.swiper-container {
+.swiper-container-services {
     min-width: 0;
     margin: 15px auto;
     position: relative;
@@ -141,7 +150,17 @@ main {
     touch-action: pan-y;
 }
 
-.swiper-wrapper {
+.swiper-container-services::before {
+    content: '';
+    position: absolute;
+    width: 24px;
+    height: 100%;
+    right: 0;
+    background: linear-gradient(to left, #F8F8F8 0%, rgba(248, 248, 248, 0) 100%);
+    z-index: 2;
+}
+
+.swiper-wrapper-services {
     position: relative;
     width: 100%;
     height: 100%;
@@ -156,7 +175,7 @@ main {
     align-items: center;
 }
 
-.swiper-slide {
+.swiper-slide-services {
     max-width: max-content;
     margin-right: 15px;
     color: #7E7E82;
@@ -166,6 +185,19 @@ main {
     padding: 8px;
 }
 
+.swiper-slide-button {
+    width: 100%;
+    height: 100%;
+    color: #7E7E82;
+    font-size: 16px;
+}
+
+.swiper-slide-services:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
 button {
     background: 0;
     border: 0;
@@ -173,15 +205,22 @@ button {
 
 .active {
     background: white;
-    border: 2px solid #B8FFEC;
+    box-shadow: inset 0 0 0 2px #B8FFEC;
     border-radius: 10px;
+}
+
+.main-block {
+    margin-left: 16px;
+    max-width: 1440px;
 }
 
 .main {
     background-color: #F8F8F8;
+    height: 100%;
 }
 
 .main-content {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
@@ -189,17 +228,19 @@ button {
 
 .text-block__text {
     order: 1;
-    width: 100%;
+    /*width: 100%;*/
     font-size: 14px;
     line-height: 18px;
     letter-spacing: 0.2px;
     color: #1B1C21;
     align-self: flex-start;
     max-height: 90px;
+    max-width: 565px;
     overflow: hidden;
+    /*text-overflow: ellipsis;*/
 }
 
-.read-more {
+.read-more-services {
     order: 2;
     display: flex;
     line-height: 24px;
@@ -207,23 +248,27 @@ button {
     margin-left: 10px;
 }
 
-.read-more__button {
+.read-more__expand-services {
+    margin-right: 8px;
+}
+
+.read-more__button-text {
     order: 2;
     font-size: 16px;
     font-weight: 500;
     letter-spacing: -0.2px;
     color: #1B1C21;
-    margin-left: 16px;
 }
 
 .image-block {
+    position: relative;
     order: 3;
     width: 100%;
     margin-top: 16px;
 }
 
 .image-block__image {
-    position: absolute;
+    /*position: absolute;*/
     width: 100%;
     min-width: 320px;
     height: auto;
@@ -245,7 +290,7 @@ button {
     display: none;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 768px) {
     .container {
         max-width: 100%;
         margin: 0 auto;
@@ -293,11 +338,10 @@ button {
     }
 
     .image-block__container {
-        display: flex;
-        position: static;
-        margin-top: 0;
-        justify-content: center;
-        margin-left: 10px;
+        /*position: static;*/
+        /*margin-top: 0;*/
+        /*justify-content: center;*/
+        /*margin-left: 10px;*/
     }
     .image-block__image {
         position: static;
@@ -305,6 +349,12 @@ button {
         height: auto;
         border-radius: 6px;
         left: auto;
+    }
+}
+
+@media (min-width: 1140px) {
+    .swiper-container-services {
+        display: block;
     }
 }
 
@@ -316,6 +366,7 @@ button {
 
     .header-items {
         background: none;
+        max-width: 1340px;
     }
 
 
@@ -383,6 +434,15 @@ button {
         height: auto;
         border-radius: 6px;
         left: auto;
+    }
+
+    .swiper-wrapper-services {
+        flex-wrap: wrap;
+        /*justify-content: space-around;*/
+    }
+
+    .swiper-slide-services:last-child {
+        margin-top: 4px;
     }
 }
 
